--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,9 +12,7 @@ hooks-directory = ${buildout:directory}/hooks
 [versions]
 [part]
 recipe = minitage.recipe.cmmi
-url = http://tesseract-ocr.googlecode.com/files/tesseract-3.00.tar.gz
-md5sum = cc812a261088ea0c3d2da735be35d09f
+url = http://leptonica.googlecode.com/files/leptonlib-1.67.tar.gz
+md5sum = 23f03ad6a0cab67714df98110ad2e141
 
-cygwin-patches=
-patch-options=-Np1
-configure-options =
+
