--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,5 +14,7 @@ hooks-directory = ${buildout:directory}/hooks
 recipe = minitage.recipe.cmmi
 url = http://leptonica.googlecode.com/files/leptonlib-1.67.tar.gz
 md5sum = 23f03ad6a0cab67714df98110ad2e141
-
-
+#pre-configure-hook=${buildout:directory}/h.py:h
+#patches=${buildout:directory}/leptonica-build-shared.diff
+#atch-options=-Np1
+#configure-options=--disable-static --enable-static=no
