--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,8 +12,11 @@ hooks-directory = ${buildout:directory}/hooks
 [versions]
 [part]
 recipe = minitage.recipe.cmmi
-url = http://leptonica.googlecode.com/files/leptonlib-1.68.tar.gz
+url = http://www.leptonica.org/source/leptonica-1.68.tar.gz
 md5sum = 5cd7092f9ff2ca7e3f3e73bfcd556403
+patches=${buildout:directory}/zlib-include.patch
+
+patch-options=-Np1
 
 #pre-configure-hook=${buildout:directory}/h.py:h
 #patches=${buildout:directory}/leptonica-build-shared.diff
