--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@
 # the project part is maybe the only one you will need to modify for a new
 # project
 [buildout]
+extensions=buildout.minitagificator
 eggs-directory=../../eggs/cache
 develop-eggs-directory=../../develop-eggs
 parts = part
